# hermes-ollama-agent

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  RESEARCH_SOURCES.md
skills/: code_change_protocol.md  delegation_protocol.md  research_planning.md
src/hermes_ollama_agent/: __init__.py  cli.py  code_exec.py  commands.py  config.py  events.py  health.py  kernel.py  memory.py  memory_provider.py  prompts.py  routing_policy.py  runtime.py  skills.py  task_engine.py  web_tools.py
tests/: test_phase_c.py
